--- a/signup.html
+++ b/signup.html
@@ -35,58 +35,6 @@
         </div>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.5.0/firebase-auth.js"></script>
-    <script>
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
-            authDomain: "messengerapp-58f7a.firebaseapp.com",
-            databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
-            projectId: "messengerapp-58f7a",
-            storageBucket: "messengerapp-58f7a.firebasestorage.app",
-            messagingSenderId: "46178168523",
-            appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
-        };
-
-        // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
-
-        // Get DOM elements
-        const signupForm = document.getElementById('signupForm');
-        const errorMessage = document.getElementById('error-message');
-
-        // Sign Up functionality
-        signupForm.addEventListener('submit', (event) => {
-            event.preventDefault();
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const confirmPassword = document.getElementById('confirmPassword').value;
-
-            if (password !== confirmPassword) {
-                errorMessage.textContent = "كلمات المرور غير متطابقة!";
-                return;
-            }
-
-            auth.createUserWithEmailAndPassword(email, password)
-                .then(() => {
-                    window.location.href = 'login.html'; // Redirect to the login page after successful sign up
-                })
-                .catch((error) => {
-                    const errorCode = error.code;
-                    const errorMessageText = error.message;
-
-                    if (errorCode === 'auth/email-already-in-use') {
-                        errorMessage.textContent = "البريد الإلكتروني مُستخدم بالفعل.";
-                    } else if (errorCode === 'auth/weak-password') {
-                        errorMessage.textContent = "كلمة المرور ضعيفة جداً.";
-                    } else {
-                        errorMessage.textContent = "حدث خطأ يرجى المحاولة لاحقاً.";
-                    }
-                });
-        });
-    </script>
+    <script src="app.js"></script>
 </body>
 </html>
