--- a/profile.html
+++ b/profile.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="profile-container">
-        <h2>الملف الشخصي</h2>
-        <form id="profile-form">
-            <input type="file" id="profile-image" />
-            <button type="submit">رفع الصورة</button>
-        </form>
-        <img id="profile-pic" src="" alt="Profile Picture" />
-        <p id="status"></p>
+    <div class="container">
+        <header>
+            <h1>الملف الشخصي</h1>
+        </header>
+
+        <div class="profile-section">
+            <img id="profileImage" src="" alt="Profile Image">
+            <h2 id="username"></h2>
+            <p id="bio"></p>
+        </div>
+
+        <button onclick="window.location.href='friends.html'">رجوع إلى الأصدقاء</button>
     </div>
 
-    <script src="firebase-config.js"></script>
-    <script src="profile.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
