--- a/login.html
+++ b/login.html
@@ -1,36 +1,22 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول</title>
+    <title>تسجيل الدخول - تطبيق المراسلة</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>تسجيل الدخول</h1>
-        </header>
-        
-        <div class="login-section">
-            <form id="loginForm">
-                <div class="form-group">
-                    <label for="email">البريد الإلكتروني</label>
-                    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">كلمة المرور</label>
-                    <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
-                </div>
-                <button type="submit">تسجيل الدخول</button>
-            </form>
-
-            <p id="error-message" class="error-message"></p>
-
-            <p>لا تمتلك حساب؟ <a href="signup.html">إنشاء حساب جديد</a></p>
-        </div>
+    <div class="form-container">
+        <h2>تسجيل الدخول</h2>
+        <form id="loginForm">
+            <input type="email" id="loginEmail" placeholder="البريد الإلكتروني" required>
+            <input type="password" id="loginPassword" placeholder="كلمة المرور" required>
+            <button type="submit" class="btn">دخول</button>
+        </form>
+        <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب جديد</a></p>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
