--- a/signup.html
+++ b/signup.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إنشاء حساب</title>
+    <title>إنشاء حساب - تطبيق المراسلة</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>إنشاء حساب جديد</h1>
-        </header>
-        
-        <div class="signup-section">
-            <form id="signupForm">
-                <div class="form-group">
-                    <label for="email">البريد الإلكتروني</label>
-                    <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">كلمة المرور</label>
-                    <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
-                </div>
-                <div class="form-group">
-                    <label for="confirmPassword">تأكيد كلمة المرور</label>
-                    <input type="password" id="confirmPassword" placeholder="أكد كلمة المرور" required>
-                </div>
-                <button type="submit">إنشاء حساب</button>
-            </form>
-
-            <p id="error-message" class="error-message"></p>
-
-            <p>هل لديك حساب بالفعل؟ <a href="login.html">تسجيل الدخول</a></p>
-        </div>
+    <div class="form-container">
+        <h2>إنشاء حساب جديد</h2>
+        <form id="signupForm">
+            <input type="text" id="signupUsername" placeholder="اسم المستخدم" required>
+            <input type="email" id="signupEmail" placeholder="البريد الإلكتروني" required>
+            <input type="password" id="signupPassword" placeholder="كلمة المرور" required>
+            <button type="submit" class="btn">تسجيل</button>
+        </form>
+        <p>لديك حساب؟ <a href="login.html">سجل دخولك هنا</a></p>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
