--- a/friends.html
+++ b/friends.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الأصدقاء</title>
+    <title>الأصدقاء - تطبيق المراسلة</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>الأصدقاء</h1>
+    <div class="friends-container">
+        <header class="chat-header">
+            <h2>قائمة الأصدقاء</h2>
+            <button id="logoutBtn" class="btn-logout">تسجيل الخروج</button>
         </header>
 
-        <div class="friends-list-section">
-            <ul id="friendsList"></ul>
+        <div id="friendsList" class="friends-list">
+            <!-- يتم تعبئة الأصدقاء ديناميكياً عبر JavaScript -->
         </div>
-
-        <button onclick="window.location.href='chat.html'">الدردشة</button>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
