--- a/index.html
+++ b/index.html
@@ -2,44 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AI Chatbot (No API Key)</title>
+  <title>Working AI Chatbot</title>
   <style>
-    body { font-family: Arial; padding: 20px; background: #f4f4f4; }
-    #chat-box { border: 1px solid #ccc; height: 300px; overflow-y: auto; padding: 10px; background: white; margin-bottom: 10px; }
-    .message { margin: 5px 0; }
-    #status { color: gray; font-size: 0.9em; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      padding: 20px;
+    }
+    #chat-box {
+      border: 1px solid #ccc;
+      height: 300px;
+      overflow-y: auto;
+      background: white;
+      padding: 15px;
+      margin-bottom: 10px;
+    }
+    .message {
+      margin: 8px 0;
+    }
+    input, button {
+      padding: 10px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
 
-<h2>🤖 AI Chatbot (No API Key)</h2>
+<h2>🤖 Working AI Chatbot (No Key)</h2>
 <div id="chat-box"></div>
-<div id="status">Loading model... Please wait (may take a minute)</div>
-<form id="chat-form" style="display:none;">
-  <input type="text" id="user-input" placeholder="Type your message..." required autocomplete="off" style="width: 80%; padding: 10px;" />
-  <button type="submit" style="padding: 10px;">Send</button>
+<form id="chat-form">
+  <input type="text" id="user-input" placeholder="Type your message..." autocomplete="off" required style="width: 75%;" />
+  <button type="submit">Send</button>
 </form>
 
-<script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.6.0/dist/transformers.min.js"></script>
-<script type="module">
-  import { pipeline } from 'https://cdn.jsdelivr.net/npm/@xenova/transformers@2.6.0/+esm';
-
+<script>
   const chatBox = document.getElementById('chat-box');
   const form = document.getElementById('chat-form');
   const input = document.getElementById('user-input');
-  const status = document.getElementById('status');
-
-  let chatbot;
-
-  try {
-    status.textContent = "Loading model... (this may take a minute)";
-    chatbot = await pipeline('conversational', 'Xenova/gpt-2');
-    status.style.display = 'none';
-    form.style.display = 'block';
-  } catch (err) {
-    status.innerHTML = "<span style='color:red;'>Error loading model.</span> Try again or use online hosting.";
-    console.error(err);
-  }
 
   async function appendMessage(role, text) {
     const msg = document.createElement('div');
@@ -52,18 +51,27 @@
   form.addEventListener('submit', async (e) => {
     e.preventDefault();
     const userText = input.value.trim();
-    if (!userText || !chatbot) return;
+    if (!userText) return;
 
     await appendMessage('You', userText);
+    input.value = 'Thinking...';
+    input.disabled = true;
 
     try {
-      const response = await chatbot(userText);
-      await appendMessage('Bot', response.generated_text);
+      const res = await fetch('https://api-free.vercel.app/api/chat', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ prompt: userText }),
+      });
+
+      const data = await res.json();
+      await appendMessage('Bot', data.text || '⚠️ No response received.');
     } catch (err) {
-      await appendMessage('Bot', '⚠️ An error occurred: ' + err.message);
+      await appendMessage('Bot', '❌ Error: ' + err.message);
     }
 
     input.value = '';
+    input.disabled = false;
   });
 </script>
 
