--- a/index.html
+++ b/index.html
@@ -2,39 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Working AI Chatbot</title>
+  <title>AI Chatbot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f7f7f7;
+      background-color: #f2f2f2;
       padding: 20px;
+      margin: 0;
     }
+
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+
     #chat-box {
       border: 1px solid #ccc;
-      height: 300px;
+      background-color: #fff;
+      height: 350px;
       overflow-y: auto;
-      background: white;
       padding: 15px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      border-radius: 8px;
     }
+
     .message {
       margin: 8px 0;
+      line-height: 1.4;
     }
-    input,
-    button {
+
+    .you {
+      color: #2d8ffc;
+    }
+
+    .bot {
+      color: #2ecc71;
+    }
+
+    form {
+      display: flex;
+      gap: 10px;
+    }
+
+    input[type="text"] {
+      flex-grow: 1;
       padding: 10px;
       font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #3498db;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #2980b9;
+    }
+
+    #status {
+      font-size: 0.9em;
+      color: gray;
+      text-align: center;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-<h2>🤖 Working AI Chatbot (Reliable Version)</h2>
+<h2>🤖 AI Chatbot</h2>
 <div id="chat-box"></div>
 <form id="chat-form">
-  <input type="text" id="user-input" placeholder="Type your message..." autocomplete="off" required style="width: 75%;" />
+  <input type="text" id="user-input" placeholder="Ask me anything..." autocomplete="off" required />
   <button type="submit">Send</button>
 </form>
+<div id="status">Powered by a free AI server</div>
 
 <script>
   const chatBox = document.getElementById('chat-box');
@@ -44,7 +93,11 @@
   async function appendMessage(role, text) {
     const msg = document.createElement('div');
     msg.className = 'message';
-    msg.innerHTML = `<strong>${role}:</strong> ${text}`;
+    if (role === 'You') {
+      msg.innerHTML = `<strong class="you">${role}:</strong> ${text}`;
+    } else {
+      msg.innerHTML = `<strong class="bot">${role}:</strong> ${text}`;
+    }
     chatBox.appendChild(msg);
     chatBox.scrollTop = chatBox.scrollHeight;
   }
@@ -65,7 +118,7 @@
         body: JSON.stringify({ prompt: userText }),
       });
 
-      if (!res.ok) throw new Error('Server responded with error.');
+      if (!res.ok) throw new Error('Server error or offline.');
 
       const data = await res.json();
       const responseText = data.text || '⚠️ No response.';
