--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AI Chatbot</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Chatbot - Fixed</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
+      background-color: #f5f5f5;
       padding: 20px;
-      margin: 0;
     }
 
     h2 {
@@ -20,24 +19,23 @@
     #chat-box {
       border: 1px solid #ccc;
       background-color: #fff;
-      height: 350px;
+      height: 300px;
       overflow-y: auto;
       padding: 15px;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       border-radius: 8px;
     }
 
     .message {
-      margin: 8px 0;
-      line-height: 1.4;
+      margin: 6px 0;
     }
 
     .you {
-      color: #2d8ffc;
+      color: #007bff;
     }
 
     .bot {
-      color: #2ecc71;
+      color: #28a745;
     }
 
     form {
@@ -48,23 +46,23 @@
     input[type="text"] {
       flex-grow: 1;
       padding: 10px;
-      font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
+      font-size: 16px;
     }
 
     button {
       padding: 10px 20px;
-      font-size: 16px;
-      background-color: #3498db;
+      background-color: #007bff;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      font-size: 16px;
     }
 
     button:hover {
-      background-color: #2980b9;
+      background-color: #0056b3;
     }
 
     #status {
@@ -77,18 +75,34 @@
 </head>
 <body>
 
-<h2>🤖 AI Chatbot</h2>
+<h2>🤖 AI Chatbot (No Fetch Errors)</h2>
 <div id="chat-box"></div>
 <form id="chat-form">
-  <input type="text" id="user-input" placeholder="Ask me anything..." autocomplete="off" required />
+  <input type="text" id="user-input" placeholder="Type your message..." autocomplete="off" required />
   <button type="submit">Send</button>
 </form>
-<div id="status">Powered by a free AI server</div>
+<div id="status">Model loading... Please wait (first-time only)</div>
 
-<script>
+<script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.7.0/dist/transformers.min.js"></script>
+<script type="module">
+  import { pipeline } from 'https://cdn.jsdelivr.net/npm/@xenova/transformers@2.7.0/+esm';
+
   const chatBox = document.getElementById('chat-box');
   const form = document.getElementById('chat-form');
   const input = document.getElementById('user-input');
+  const status = document.getElementById('status');
+
+  let chatbot;
+
+  try {
+    status.textContent = 'Loading AI model (GPT-2 Small)... This may take a minute on the first run.';
+    chatbot = await pipeline('conversational', 'Xenova/gpt-2');
+    status.style.display = 'none';
+    form.style.display = 'flex';
+  } catch (err) {
+    status.innerHTML = '<span style="color:red;">⚠️ Failed to load model.</span> Try hosting online or use Chrome.';
+    console.error(err);
+  }
 
   async function appendMessage(role, text) {
     const msg = document.createElement('div');
@@ -96,42 +110,4 @@
     if (role === 'You') {
       msg.innerHTML = `<strong class="you">${role}:</strong> ${text}`;
     } else {
-      msg.innerHTML = `<strong class="bot">${role}:</strong> ${text}`;
-    }
-    chatBox.appendChild(msg);
-    chatBox.scrollTop = chatBox.scrollHeight;
-  }
-
-  form.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const userText = input.value.trim();
-    if (!userText) return;
-
-    await appendMessage('You', userText);
-    input.value = 'Thinking...';
-    input.disabled = true;
-
-    try {
-      const res = await fetch('https://free-chatty.vercel.app/api/chat', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ prompt: userText }),
-      });
-
-      if (!res.ok) throw new Error('Server error or offline.');
-
-      const data = await res.json();
-      const responseText = data.text || '⚠️ No response.';
-      await appendMessage('Bot', responseText);
-
-    } catch (err) {
-      await appendMessage('Bot', '❌ Error: ' + err.message);
-    }
-
-    input.value = '';
-    input.disabled = false;
-  });
-</script>
-
-</body>
-</html>
+      msg.innerHTML = `<strong class="bot">${role}:</
