--- a/index.html
+++ b/index.html
@@ -1,113 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>AI Chatbot - Fixed</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      padding: 20px;
-    }
-
-    h2 {
-      text-align: center;
-      color: #333;
-    }
-
-    #chat-box {
-      border: 1px solid #ccc;
-      background-color: #fff;
-      height: 300px;
-      overflow-y: auto;
-      padding: 15px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-    }
-
-    .message {
-      margin: 6px 0;
-    }
-
-    .you {
-      color: #007bff;
-    }
-
-    .bot {
-      color: #28a745;
-    }
-
-    form {
-      display: flex;
-      gap: 10px;
-    }
-
-    input[type="text"] {
-      flex-grow: 1;
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    button {
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    #status {
-      font-size: 0.9em;
-      color: gray;
-      text-align: center;
-      margin-top: 10px;
-    }
-  </style>
-</head>
-<body>
-
-<h2>🤖 AI Chatbot (No Fetch Errors)</h2>
-<div id="chat-box"></div>
-<form id="chat-form">
-  <input type="text" id="user-input" placeholder="Type your message..." autocomplete="off" required />
-  <button type="submit">Send</button>
-</form>
-<div id="status">Model loading... Please wait (first-time only)</div>
-
-<script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@2.7.0/dist/transformers.min.js"></script>
-<script type="module">
-  import { pipeline } from 'https://cdn.jsdelivr.net/npm/@xenova/transformers@2.7.0/+esm';
-
-  const chatBox = document.getElementById('chat-box');
-  const form = document.getElementById('chat-form');
-  const input = document.getElementById('user-input');
-  const status = document.getElementById('status');
-
-  let chatbot;
-
-  try {
-    status.textContent = 'Loading AI model (GPT-2 Small)... This may take a minute on the first run.';
-    chatbot = await pipeline('conversational', 'Xenova/gpt-2');
-    status.style.display = 'none';
-    form.style.display = 'flex';
-  } catch (err) {
-    status.innerHTML = '<span style="color:red;">⚠️ Failed to load model.</span> Try hosting online or use Chrome.';
-    console.error(err);
-  }
-
-  async function appendMessage(role, text) {
-    const msg = document.createElement('div');
-    msg.className = 'message';
-    if (role === 'You') {
-      msg.innerHTML = `<strong class="you">${role}:</strong> ${text}`;
-    } else {
-      msg.innerHTML = `<strong class="bot">${role}:</
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Messenger Clone</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
