--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="chat-container">
+  <!-- Login Section -->
+  <div id="login-screen" class="screen">
+    <h2>🔐 Login or Add User</h2>
+    <input type="text" id="username-input" placeholder="Enter your username" required />
+    <button onclick="login()">Login</button>
+    <button onclick="addUser()">Add User</button>
+  </div>
+
+  <!-- Chat Section -->
+  <div id="chat-screen" class="screen hidden">
     <h1>💬 Messenger Clone</h1>
+    <p>Welcome, <span id="display-username"></span></p>
     <div id="chat-box"></div>
     <form id="message-form">
-      <input type="text" id="username" placeholder="Your name" required />
-      <input type="text" id="message" placeholder="Type a message..." required />
+      <input type="text" id="message-input" placeholder="Type a message..." required />
       <button type="submit">Send</button>
     </form>
   </div>
