--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
-<h2>🔐 Sign In</h2>
-<input type="text" id="username-login" placeholder="Username">
-<input type="password" id="password-login" placeholder="Password">
-<button onclick="signIn()">Login</button>
-<p>Don't have an account? <a href="#" onclick="showRegister()">Register</a></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Secure Messenger</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body class="light">
+  <div id="login-screen" class="screen">
+    <h2>🔐 Sign In</h2>
+    <input type="text" id="username-login" placeholder="Username" required />
+    <input type="password" id="password-login" placeholder="Password" required />
+    <button onclick="signIn()">Login</button>
+    <p>Don't have an account? <a href="#" onclick="showRegister()">Register</a></p>
+  </div>
 
-<!-- Register Form -->
-<div id="register-form" class="hidden">
-  <input type="text" id="username-register" placeholder="Username">
-  <input type="password" id="password-register" placeholder="Password">
-  <input type="text" id="fullname-register" placeholder="Full Name">
-  <input type="email" id="email-register" placeholder="Email (optional)">
-  <input type="text" id="bio-register" placeholder="Bio">
-  <input type="file" id="avatar-register">
-  <button onclick="signUp()">Register</button>
-</div>
+  <div id="register-screen" class="screen hidden">
+    <h2>📝 Register</h2>
+    <input type="text" id="username-register" placeholder="Username" required />
+    <input type="password" id="password-register" placeholder="Password" required />
+    <input type="text" id="fullname-register" placeholder="Full Name" required />
+    <input type="email" id="email-register" placeholder="Email (optional)" />
+    <input type="text" id="bio-register" placeholder="Bio" />
+    <input type="file" id="avatar-register" />
+    <button onclick="signUp()">Register</button>
+    <p>Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
+  </div>
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+
+  <script src="firebase-config.js"></script>
+  <script src="crypto-lib.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
