--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
 
+  <!-- CryptoJS for Encryption -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
   <script src="firebase-config.js"></script>
   <script src="crypto-lib.js"></script>
   <script src="script.js"></script>
