--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     <p>Already have an account? <a href="#" onclick="showLogin()">Login</a></p>
   </div>
 
-  <!-- Firebase SDK -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
 
-  <!-- CryptoJS for Encryption -->
+  <!-- CryptoJS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
+  <!-- Script files -->
   <script src="firebase-config.js"></script>
-  <script src="crypto-lib.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
