--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <label><input type="checkbox" id="theme-toggle"> Dark Mode</label>
 
     <h3>👥 Friends</h3>
-    <input type="text" id="search-username" placeholder="Search by username" />
+    <input type="text" id="search-email" placeholder="Search by email" />
     <button onclick="addFriend()">Add User</button>
     <ul id="friends-list"></ul>
 
